--- a/server/plugins/Terraria/Data/NPC.yml
+++ b/server/plugins/Terraria/Data/NPC.yml
@@ -202,6 +202,7 @@ shops:
     - 海胆链球
     - 贝壳刃弓
     - 珊瑚手炮
+    - 沙钱
     - 附魔海螺
     血肉之墙:
     - 始源暗影炎
@@ -283,3 +284,10 @@ shops:
     - 僵尸时装
     - 僵尸宝宝时装
     - 小动物友谊指南
+  强盗:
+    骷髅王:
+    - 回飞刃
+    - 回飞棒
+    - 五指剑
+    世纪之花:
+    - 猴子飞镖
