--- a/server/plugins/Terraria/Data/armorSet.yml
+++ b/server/plugins/Terraria/Data/armorSet.yml
@@ -11,88 +11,6 @@ pieces:
   - 仙人掌套装
   仙人掌护腿:
   - 仙人掌套装
-  钨钢战盔:
-  - 钨钢近战套装
-  钨钢头饰:
-  - 钨钢远程魔法套装
-  钨钢兜帽:
-  - 钨钢远程魔法套装
-  钨钢头罩:
-  - 钨钢召唤套装
-  钨钢盔甲:
-  - 钨钢近战套装
-  - 钨钢远程魔法套装
-  - 钨钢召唤套装
-  钨钢护胫:
-  - 钨钢近战套装
-  - 钨钢远程魔法套装
-  - 钨钢召唤套装
-  沙漠巡游者帽:
-  - 沙漠巡游者套装
-  沙漠巡游者衣:
-  - 沙漠巡游者套装
-  沙漠巡游者裤:
-  - 沙漠巡游者套装
-  胜潮贝盔:
-  - 胜潮近战套装
-  胜潮瑚巾:
-  - 胜潮远程套装
-  胜潮隐帽:
-  - 胜潮魔法套装
-  胜潮面罩:
-  - 胜潮召唤套装
-  胜潮胸甲:
-  - 胜潮近战套装
-  - 胜潮远程套装
-  - 胜潮召唤套装
-  - 胜潮魔法套装
-  胜潮护胫:
-  - 胜潮近战套装
-  - 胜潮远程套装
-  - 胜潮召唤套装
-  - 胜潮魔法套装
-  天蓝战盔:
-  - 天蓝近战套装
-  天蓝兜帽:
-  - 天蓝远程套装
-  天蓝帽:
-  - 天蓝魔法套装
-  天蓝头盔:
-  - 天蓝召唤套装
-  天蓝胸甲:
-  - 天蓝近战套装
-  - 天蓝远程套装
-  - 天蓝召唤套装
-  - 天蓝魔法套装
-  天蓝护胫:
-  - 天蓝近战套装
-  - 天蓝远程套装
-  - 天蓝召唤套装
-  - 天蓝魔法套装
-  斯塔提斯战盔:
-  - 斯塔提斯近战套装
-  斯塔提斯头饰:
-  - 斯塔提斯远程套装
-  斯塔提斯帽子:
-  - 斯塔提斯魔法套装
-  斯塔提斯兜帽:
-  - 斯塔提斯召唤套装
-  斯塔提斯盔甲:
-  - 斯塔提斯近战套装
-  - 斯塔提斯远程套装
-  - 斯塔提斯魔法套装
-  - 斯塔提斯召唤套装
-  斯塔提斯护胫:
-  - 斯塔提斯近战套装
-  - 斯塔提斯远程套装
-  - 斯塔提斯魔法套装
-  - 斯塔提斯召唤套装
-  忍者头盔:
-  - 忍者套装
-  忍者胸甲:
-  - 忍者套装
-  忍者护腿:
-  - 忍者套装
   铜头盔:
   - 铜套装
   铜链甲:
@@ -121,12 +39,66 @@ pieces:
   - 金套装
   金护胫:
   - 金套装
+  钨钢战盔:
+  - 钨钢近战套装
+  钨钢头饰:
+  - 钨钢远程魔法套装
+  钨钢面具:
+  - 钨钢盗贼套装
+  钨钢兜帽:
+  - 钨钢远程魔法套装
+  钨钢头罩:
+  - 钨钢召唤套装
+  钨钢盔甲:
+  - 钨钢近战套装
+  - 钨钢远程魔法套装
+  - 钨钢盗贼套装
+  - 钨钢召唤套装
+  钨钢护胫:
+  - 钨钢近战套装
+  - 钨钢远程魔法套装
+  - 钨钢盗贼套装
+  - 钨钢召唤套装
+  沙漠巡游者帽:
+  - 沙漠巡游者套装
+  沙漠巡游者衣:
+  - 沙漠巡游者套装
+  沙漠巡游者裤:
+  - 沙漠巡游者套装
   丛林帽:
   - 丛林法师套
   丛林衣:
   - 丛林法师套
   丛林裤:
   - 丛林法师套
+  忍者头盔:
+  - 忍者套装
+  忍者胸甲:
+  - 忍者套装
+  忍者护腿:
+  - 忍者套装
+  胜潮贝盔:
+  - 胜潮近战套装
+  胜潮瑚巾:
+  - 胜潮远程套装
+  胜潮蟹盔:
+  - 胜潮盗贼套装
+  胜潮隐帽:
+  - 胜潮魔法套装
+  胜潮面罩:
+  - 胜潮召唤套装
+  胜潮胸甲:
+  - 胜潮近战套装
+  - 胜潮远程套装
+  - 胜潮盗贼套装
+  - 胜潮召唤套装
+  - 胜潮魔法套装
+  胜潮护胫:
+  - 胜潮近战套装
+  - 胜潮远程套装
+  - 胜潮盗贼套装
+  - 胜潮召唤套装
+  - 胜潮魔法套装
   流星头盔:
   - 流星套装
   流星护甲:
@@ -145,24 +117,74 @@ pieces:
   - 暗影套装
   暗影护胫:
   - 暗影套装
-  死灵头盔:
-  - 死灵射手套
-  死灵胸甲:
-  - 死灵射手套
-  死灵护胫:
-  - 死灵射手套
   熔岩头盔:
   - 熔岩套装
   熔岩胸甲:
   - 熔岩套装
   熔岩护胫:
   - 熔岩套装
+  天蓝战盔:
+  - 天蓝近战套装
+  天蓝兜帽:
+  - 天蓝远程套装
+  天蓝头套:
+  - 天蓝盗贼套装
+  天蓝帽:
+  - 天蓝魔法套装
+  天蓝头盔:
+  - 天蓝召唤套装
+  天蓝胸甲:
+  - 天蓝近战套装
+  - 天蓝远程套装
+  - 天蓝盗贼套装
+  - 天蓝召唤套装
+  - 天蓝魔法套装
+  天蓝护胫:
+  - 天蓝近战套装
+  - 天蓝远程套装
+  - 天蓝盗贼套装
+  - 天蓝召唤套装
+  - 天蓝魔法套装
+  死灵头盔:
+  - 死灵射手套
+  死灵胸甲:
+  - 死灵射手套
+  死灵护胫:
+  - 死灵射手套
+  斯塔提斯战盔:
+  - 斯塔提斯近战套装
+  斯塔提斯头饰:
+  - 斯塔提斯远程套装
+  斯塔提斯面具:
+  - 斯塔提斯盗贼套装
+  斯塔提斯帽子:
+  - 斯塔提斯魔法套装
+  斯塔提斯兜帽:
+  - 斯塔提斯召唤套装
+  斯塔提斯盔甲:
+  - 斯塔提斯近战套装
+  - 斯塔提斯远程套装
+  - 斯塔提斯盗贼套装
+  - 斯塔提斯魔法套装
+  - 斯塔提斯召唤套装
+  斯塔提斯护胫:
+  - 斯塔提斯近战套装
+  - 斯塔提斯远程套装
+  - 斯塔提斯盗贼套装
+  - 斯塔提斯魔法套装
+  - 斯塔提斯召唤套装
   蜘蛛面具:
   - 蜘蛛套装
   蜘蛛胸甲:
   - 蜘蛛套装
   蜘蛛护胫:
   - 蜘蛛套装
+  泰坦之心面具:
+  - 泰坦之心套装
+  泰坦之心斗篷:
+  - 泰坦之心套装
+  泰坦之心靴子:
+  - 泰坦之心套装
   软壳贝盔:
   - 软壳套装
   软壳贝甲:
@@ -203,6 +225,28 @@ pieces:
   - 秘银战士套装
   - 秘银魔法套装
   - 秘银射手套装
+  代达罗斯头盔:
+  - 代达罗斯战士套装
+  代达罗斯头罩:
+  - 代达罗斯射手套装
+  代达罗斯面罩:
+  - 代达罗斯盗贼套装
+  代达罗斯兜帽:
+  - 代达罗斯魔法套装
+  代达罗斯面具:
+  - 代达罗斯召唤套装
+  代达罗斯胸甲:
+  - 代达罗斯战士套装
+  - 代达罗斯射手套装
+  - 代达罗斯盗贼套装
+  - 代达罗斯魔法套装
+  - 代达罗斯召唤套装
+  代达罗斯护胫:
+  - 代达罗斯战士套装
+  - 代达罗斯射手套装
+  - 代达罗斯盗贼套装
+  - 代达罗斯魔法套装
+  - 代达罗斯召唤套装
   精金头饰:
   - 精金魔法套装
   精金头盔:
@@ -217,24 +261,6 @@ pieces:
   - 精金战士套装
   - 精金魔法套装
   - 精金射手套装
-  代达罗斯头盔:
-  - 代达罗斯战士套装
-  代达罗斯头罩:
-  - 代达罗斯射手套装
-  代达罗斯兜帽:
-  - 代达罗斯魔法套装
-  代达罗斯面具:
-  - 代达罗斯召唤套装
-  代达罗斯胸甲:
-  - 代达罗斯战士套装
-  - 代达罗斯射手套装
-  - 代达罗斯魔法套装
-  - 代达罗斯召唤套装
-  代达罗斯护胫:
-  - 代达罗斯战士套装
-  - 代达罗斯射手套装
-  - 代达罗斯魔法套装
-  - 代达罗斯召唤套装
   神圣头盔:
   - 神圣射手套装
   神圣兜帽:
@@ -267,12 +293,6 @@ pieces:
   - 叶绿魔法套装
   - 叶绿射手套装
   - 叶绿战士套装
-  硫火兜帽:
-  - 硫火套装
-  硫火长袍:
-  - 硫火套装
-  硫火靴子:
-  - 硫火套装
   掠夺者鳞甲:
   - 掠夺者坦克套装
   - 掠夺者探索套装
@@ -287,6 +307,18 @@ pieces:
   - 掠夺者探索套装
   掠夺者头套:
   - 掠夺者挖掘套装
+  硫火兜帽:
+  - 硫火套装
+  硫火长袍:
+  - 硫火套装
+  硫火靴子:
+  - 硫火套装
+  日影兜帽:
+  - 日影套装
+  日影斗篷:
+  - 日影套装
+  日影靴子:
+  - 日影套装
   幽灵面具:
   - 幽灵输出套装
   幽灵兜帽:
@@ -329,23 +361,27 @@ pieces:
   - 阴森套装
   阴森护腿:
   - 阴森套装
+  渊泉战盔:
+  - 渊泉近战套装
+  渊泉头饰:
+  - 渊泉远程套装
+  渊泉兜帽:
+  - 渊泉盗贼套装
+  渊泉面具:
+  - 渊泉魔法套装
+  渊泉头盔:
+  - 渊泉召唤套装
   渊泉盔甲:
   - 渊泉近战套装
   - 渊泉远程套装
+  - 渊泉盗贼套装
   - 渊泉魔法套装
   - 渊泉召唤套装
   渊泉战裙:
   - 渊泉近战套装
   - 渊泉远程套装
+  - 渊泉盗贼套装
   - 渊泉魔法套装
-  - 渊泉召唤套装
-  渊泉战盔:
-  - 渊泉近战套装
-  渊泉头饰:
-  - 渊泉远程套装
-  渊泉面具:
-  - 渊泉魔法套装
-  渊泉头盔:
   - 渊泉召唤套装
   瘟疫死神面罩:
   - 瘟疫死神套装
@@ -359,34 +395,42 @@ pieces:
   - 星幻套装
   星幻护胫:
   - 星幻套装
-  星云头盔:
-  - 星云套装
-  星云胸甲:
-  - 星云套装
-  星云护腿:
-  - 星云套装
   耀斑头盔:
   - 耀斑套装
   耀斑胸甲:
   - 耀斑套装
   耀斑护腿:
   - 耀斑套装
-  星尘头盔:
-  - 星尘套装
-  星尘板甲:
-  - 星尘套装
-  星尘护腿:
-  - 星尘套装
   星璇头盔:
   - 星璇套装
   星璇胸甲:
   - 星璇套装
   星璇护腿:
   - 星璇套装
+  皇天面具:
+  - 皇天套装
+  皇天斗篷:
+  - 皇天套装
+  皇天护胫:
+  - 皇天套装
+  星云头盔:
+  - 星云套装
+  星云胸甲:
+  - 星云套装
+  星云护腿:
+  - 星云套装
+  星尘头盔:
+  - 星尘套装
+  星尘板甲:
+  - 星尘套装
+  星尘护腿:
+  - 星尘套装
   龙蒿战盔:
   - 龙蒿近战套装
   龙蒿兜帽:
   - 龙蒿远程套装
+  龙蒿头盔:
+  - 龙蒿盗贼套装
   龙蒿面具:
   - 龙蒿魔法套装
   龙蒿角盔:
@@ -394,11 +438,13 @@ pieces:
   龙蒿胸甲:
   - 龙蒿近战套装
   - 龙蒿远程套装
+  - 龙蒿盗贼套装
   - 龙蒿魔法套装
   - 龙蒿召唤套装
   龙蒿护胫:
   - 龙蒿近战套装
   - 龙蒿远程套装
+  - 龙蒿盗贼套装
   - 龙蒿魔法套装
   - 龙蒿召唤套装
   光棱头盔:
@@ -411,6 +457,8 @@ pieces:
   - 血炎近战套装
   血弑曲角盔:
   - 血炎远程套装
+  血饮魔精盔:
+  - 血炎盗贼套装
   血魇九头盔:
   - 血炎魔法套装
   血戮狂龙盔:
@@ -418,11 +466,13 @@ pieces:
   血炎铠甲:
   - 血炎近战套装
   - 血炎远程套装
+  - 血炎盗贼套装
   - 血炎魔法套装
   - 血炎召唤套装
   血炎护胫:
   - 血炎近战套装
   - 血炎远程套装
+  - 血炎盗贼套装
   - 血炎魔法套装
   - 血炎召唤套装
   蓝色欧米茄头盔:
@@ -435,12 +485,16 @@ pieces:
   - 弑神者近战套装
   弑神者头套:
   - 弑神者远程套装
+  弑神者面具:
+  - 弑神者盗贼套装
   弑神者胸甲:
   - 弑神者近战套装
   - 弑神者远程套装
+  - 弑神者盗贼套装
   弑神者腿甲:
   - 弑神者近战套装
   - 弑神者远程套装
+  - 弑神者盗贼套装
   始源林海兜帽:
   - 始源林海魔法套装
   始源林海头盔:
@@ -455,6 +509,8 @@ pieces:
   - 金源近战套装
   金兜铁面盔:
   - 金源远程套装
+  金羽十杀盔:
+  - 金源盗贼套装
   金虚万象盔:
   - 金源魔法套装
   金宇星界盔:
@@ -462,11 +518,13 @@ pieces:
   古圣金源盔甲:
   - 金源近战套装
   - 金源远程套装
+  - 金源盗贼套装
   - 金源魔法套装
   - 金源召唤套装
   古圣金源腿甲:
   - 金源近战套装
   - 金源远程套装
+  - 金源盗贼套装
   - 金源魔法套装
   - 金源召唤套装
   天钻头饰:
@@ -507,6 +565,18 @@ sets:
     - §a套装效果： +6 防御
     attributes:
       defence: 6
+  钨钢盗贼套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a不攻击时累积潜行值，最大50点
+    - §a一旦你的潜行值满，下一次盗贼攻击可施展潜伏攻击
+    - §b潜伏攻击：
+    - §b-> 大部分武器的潜伏攻击都有特殊效果
+    - §b-> 获得相当于当前潜行值的盗贼百分比伤害
+    - §b-> 依据当前的潜行值，按比例额外获得20暴击率
+    attributes:
+      stealthLimit: 50
   钨钢召唤套装:
     lore:
     - ''
@@ -602,6 +672,19 @@ sets:
       damageRangedMulti: 0.1
       regen: 3
       waterAffinity: 1
+  胜潮盗贼套装:
+    lore:
+    - ''
+    - §a套装效果： 
+    - §a+3 生命恢复
+    - §a+10% 盗贼伤害
+    - §a+60 潜行值上限
+    - §a增加水下适应性
+    attributes:
+      damageRogueMulti: 0.1
+      regen: 3
+      stealthLimit: 60
+      waterAffinity: 1
   胜潮魔法套装:
     lore:
     - ''
@@ -674,6 +757,17 @@ sets:
     attributes:
       critRanged: 5
       speedMulti: 0.15
+  天蓝盗贼套装:
+    lore:
+    - ''
+    - §a套装效果： 
+    - §a+5% 移动速度
+    - §a+5% 盗贼暴击
+    - §a+80 潜行值上限
+    attributes:
+      critRogue: 5
+      speedMulti: 0.05
+      stealthLimit: 80
   天蓝魔法套装:
     lore:
     - ''
@@ -717,6 +811,13 @@ sets:
     attributes:
       critRanged: 5
       damageRangedMulti: 0.05
+  斯塔提斯盗贼套装:
+    lore:
+    - ''
+    - §a套装效果： 
+    - §a+90 潜行值上限
+    attributes:
+      stealthLimit: 90
   斯塔提斯魔法套装:
     lore:
     - ''
@@ -741,6 +842,17 @@ sets:
     - §a套装效果： +10% 仆从伤害
     attributes:
       damageSummonMulti: 0.1
+  泰坦之心套装:
+    lore:
+    - ''
+    - §a套装效果： 
+    - §a+10% 额外潜行伤害
+    - §a+10% 额外潜行暴击率
+    - §a+100 潜行值上限
+    attributes:
+      critStealth: 10
+      damageStealthMulti: 0.1
+      stealthLimit: 100
   软壳套装:
     lore:
     - ''
@@ -815,6 +927,15 @@ sets:
     - §a套装效果： +10% 远程伤害
     attributes:
       damageRangedMulti: 0.1
+  代达罗斯盗贼套装:
+    lore:
+    - ''
+    - §a套装效果： 
+    - §a+10% 盗贼伤害
+    - §a+105 潜行值上限
+    attributes:
+      damageRogueMulti: 0.1
+      stealthLimit: 105
   代达罗斯魔法套装:
     lore:
     - ''
@@ -903,6 +1024,16 @@ sets:
     attributes:
       damageMagicMulti: 0.15
       critMagic: 15
+  日影套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a盗贼的攻击有概率触发爆炸
+    - §a潜伏攻击必定触发
+    - §a该效果有1.5秒冷却时间
+    - §a+110 潜行值上限
+    attributes:
+      stealthLimit: 110
   掠夺者坦克套装:
     lore:
     - ''
@@ -990,7 +1121,7 @@ sets:
     lore:
     - ''
     - §a套装效果：
-    - §a提升15% 近战攻速
+    - §a+15% 近战攻速
     - §a造成近战伤害时发射出数个熔岩火球
     attributes:
       useSpeedMeleeMulti: 0.15
@@ -998,16 +1129,27 @@ sets:
     lore:
     - ''
     - §a套装效果：
-    - §a提升5% 远程伤害
+    - §a+5% 远程伤害
     - §a使用远程武器时发射出一个熔岩火球
     attributes:
       damageRangedMulti: 0.05
+  渊泉盗贼套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a+5% 盗贼伤害
+    - §a+110 潜行值上限
+    - §a使用盗贼武器攻击时召唤8团追踪火焰
+    - §a该效果有2秒冷却时间
+    attributes:
+      damageRogueMulti: 0.05
+      stealthLimit: 110
   渊泉魔法套装:
     lore:
     - ''
     - §a套装效果：
-    - §a提升15% 魔法伤害
-    - §a降低15% 魔力消耗
+    - §a+15% 魔法伤害
+    - §a-15% 魔力消耗
     attributes:
       damageMagicMulti: 0.15
       manaUseMulti: -0.15
@@ -1015,7 +1157,7 @@ sets:
     lore:
     - ''
     - §a套装效果：
-    - §a提升40% 召唤伤害
+    - §a+40% 召唤伤害
     - §a+3 召唤栏
     attributes:
       damageSummonMulti: 0.4
@@ -1045,12 +1187,6 @@ sets:
       useSpeedMeleeMulti: 0.2
       damageMulti: 0.2
       crit: 20
-  星云套装:
-    lore:
-    - ''
-    - §a套装效果：
-    - §a魔法伤害有机会生成增益强化道具，
-    - §a拾取强化道具可获得堆叠增益
   耀斑套装:
     lore:
     - ''
@@ -1064,12 +1200,6 @@ sets:
       knockbackResistance: 1
       damageTakenMulti: -0.2
       buffInflictMelee: 破晓|200|1
-  星尘套装:
-    lore:
-    - ''
-    - §a套装效果： +2 仆从容量
-    attributes:
-      minionLimit: 2
   星璇套装:
     lore:
     - ''
@@ -1083,6 +1213,29 @@ sets:
       critRanged: 10
       mobLimit: -2
       mobSpawnRateMulti: -0.35
+  皇天套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a+9% 盗贼伤害
+    - §a+115 潜行值上限
+    - §a盗贼弹幕击中敌人生成额外弹幕
+    - §a受伤和残血时受到来自宇宙的怒火加持
+    attributes:
+      damageRogueMulti: 0.09
+      stealthLimit: 115
+  星云套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a魔法伤害有机会生成增益强化道具，
+    - §a拾取强化道具可获得堆叠增益
+  星尘套装:
+    lore:
+    - ''
+    - §a套装效果： +2 仆从容量
+    attributes:
+      minionLimit: 2
   龙蒿近战套装:
     lore:
     - ''
@@ -1103,6 +1256,18 @@ sets:
     attributes:
       mobLimit: -2
       mobSpawnRateMulti: -0.5
+  龙蒿盗贼套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a减少刷怪量和刷怪率
+    - §a+115 潜行值上限
+    - §a使用盗贼武器暴击敌人时你会获得5秒伤害提升
+    - §a这个效果有25秒的冷却
+    attributes:
+      mobLimit: -2
+      mobSpawnRateMulti: -0.5
+      stealthLimit: 115
   龙蒿魔法套装:
     lore:
     - ''
@@ -1158,6 +1323,18 @@ sets:
     - §a此效果有30秒冷却时间
     attributes:
       regen: 6
+  血炎盗贼套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a+6 生命恢复
+    - §a+120 潜行值上限
+    - §a击中敌人会掉落红心，这个效果有5秒冷却时间
+    - §a高于80%生命时增加30防御力，提高5%盗贼伤害
+    - §a低于80%生命时提高10%盗贼伤害
+    attributes:
+      regen: 6
+      stealthLimit: 120
   血炎魔法套装:
     lore:
     - ''
@@ -1212,6 +1389,17 @@ sets:
     - §a冲刺时用弑神者能量保护自身，1秒内获得大量伤害减免和击退抗性
     - §a受到伤害后，此效果将迅速失效且进入30秒的冷却时间
     - §a你的远程武器射击时每2.5秒发射一枚弑神榴霰弹
+  弑神者盗贼套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a+120 潜行值上限
+    - §a冲刺时用弑神者能量保护自身，1秒内获得大量伤害减免和击退抗性
+    - §a受到伤害后，此效果将迅速失效且进入30秒的冷却时间
+    - §a生命值全满时大量属性获得10%的增强，这些属性包括：
+    - §a盗贼伤害，暴击率，攻击速度和潜行值恢复速度
+    attributes:
+      stealthLimit: 120
   始源林海魔法套装:
     lore:
     - ''
@@ -1283,6 +1471,31 @@ sets:
       regen: 6
       mobLimit: -2
       mobSpawnRateMulti: -0.5
+  金源盗贼套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a+130 潜行值上限
+    - §a继承龙蒿套装、血炎套装和弑神者套装盗贼头盔的效果
+    - §b-> §a继承自龙蒿套装的效果：
+    - §a减少刷怪量和刷怪率
+    - §a使用盗贼武器暴击敌人时你会获得5秒伤害提升
+    - §a这个效果有25秒的冷却
+    - §b-> §a继承自血炎套装的效果：
+    - §a+6 生命恢复
+    - §a击中敌人会掉落红心，这个效果有5秒冷却时间
+    - §a高于80%生命时增加30防御力，提高5%盗贼伤害
+    - §a低于80%生命时提高10%盗贼伤害
+    - §b-> §a继承自弑神者套装的效果：
+    - §a冲刺时用弑神者能量保护自身，1秒内获得大量伤害减免和击退抗性
+    - §a受到伤害后，此效果将迅速失效且进入30秒的冷却时间
+    - §a生命值全满时大量属性获得10%的增强，这些属性包括：
+    - §a盗贼伤害，暴击率，攻击速度和潜行值恢复速度
+    attributes:
+      regen: 6
+      mobLimit: -2
+      mobSpawnRateMulti: -0.5
+      stealthLimit: 130
   金源魔法套装:
     lore:
     - ''
