--- a/server/plugins/Terraria/Data/entities.yml
+++ b/server/plugins/Terraria/Data/entities.yml
@@ -198,13 +198,19 @@
         - "虚空石:16:24:1"
         - "深渊细胞:7:11:1"
         - "猎魂鲨牙:6:8:1"
-        - "幻妖龙吟:1:1:0.25"
         - "大比目鱼炮:1:1:0.25"
+        - "辞别飞镰:1:1:0.25"
+        - "幻妖龙吟:1:1:0.25"
 噬魂怪:
     soundDamaged: entity.hit.flesh
     drop:
         - "铜币:200:250:1"
         - "腐肉:1:1:0.33"
+肉后噬魂怪:
+    soundDamaged: entity.hit.flesh
+    drop:
+        - "诅咒焰:1:3:0.5"
+        - "咒焰匕首:1:1:0.0667"
 秃鹰:
     drop:
         - "铜币:100:200:1"
@@ -320,6 +326,7 @@
         - "中毒"
     drop:
         - "铜币:2000:4000:1"
+        - "灰烬石钟乳:1:1:0.16"
         - "旧神之誓约:1:1:0.1429"
 地狱蝙蝠:
     buffImmute:
